# Semester_4

DS2/: create.sql  design.kra  (+1 more)
URO/Qt-Project/QtProject-EmailClient/: .gitignore  CMakeLists.txt  README.md
URO/Qt-Project/QtProject-EmailClient/Assets/Sql/: emails.db  insert.sql
URO/Qt-Project/QtProject-EmailClient/Header/: MainWindow.h  Menubar.h  QComponent.h  SideBar.h  StatusBar.h  ViewPanel.h
URO/Qt-Project/QtProject-EmailClient/Header/Core/: Core.h  DIContainer.h  IService.h  QtWidgets.h  StdLib.h  Utility.h
URO/Qt-Project/QtProject-EmailClient/Header/Database/: AttachmentRepo.h  DataModels.h  DbContext.h  EmailRepo.h  FormInserter.h  UserRepo.h
URO/Qt-Project/QtProject-EmailClient/Header/Event/: EventBus.h  Events.h
URO/Qt-Project/QtProject-EmailClient/Header/Views/: ComposeView.h  ContactsView.h  EmailView.h  ViewsEnum.h
URO/Qt-Project/QtProject-EmailClient/Header/Views/ComposeView/: AttachmentSideBar.h  EmailEditor.h
URO/Qt-Project/QtProject-EmailClient/Source/: AttachmentRepo.cpp  AttachmentSideBar.cpp  CategoryList.cpp  ComposeView.cpp  ContactsView.cpp  DbContext.cpp  EmailCard.cpp  EmailCardList.cpp  EmailEditor.cpp  EmailList.cpp  EmailListFilterFrame.cpp  EmailListSearchBar.cpp  EmailListSortFrame.cpp  EmailListView.cpp  EmailPreview.cpp  EmailPreviewAttachments.cpp  EmailPreviewBody.cpp  EmailPreviewContent.cpp  EmailPreviewHeader.cpp  EmailPreviewToolbar.cpp  EmailRepo.cpp  EmailView.cpp  FormInserter.cpp  InboxListView.cpp  MainWindow.cpp  Menubar.cpp  QComponent.cpp  SideBar.cpp  StatusBar.cpp  UserRepo.cpp  ViewPanel.cpp  main.cpp
(+194 files in other folders)
